objects/vlocity_ins__InsClaimReserveTransaction__c.object
<CustomObject>
    <description>The Reserve Transaction is used to track claim reserves as the claim is processed. Each entry is an accounting transaction. A reserve transaction reserves funds for the specified claim based on reported or estimated costs (incurred but not reported, IBNR). Payment or other transactions draw down the reserved balance as claims are settled. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimCoverageId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Coverage</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__ClaimCoverage__c.vlocity_ins__ClaimId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__ClaimCoverage__c</referenceTo>
        <relationshipLabel>Reserve Transactions</relationshipLabel>
        <relationshipName>ReserveTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimInvolvedPartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involved Party</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__InsuranceClaimInvolvedInjury__c.vlocity_ins__ClaimId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__InsuranceClaimInvolvedInjury__c</referenceTo>
        <relationshipLabel>Reserve Transactions</relationshipLabel>
        <relationshipName>ReserveTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimInvolvedPropertyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Involved Property</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__InsuranceClaimInvolvedProperty__c.vlocity_ins__ClaimId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__InsuranceClaimInvolvedProperty__c</referenceTo>
        <relationshipLabel>Reserve Transactions</relationshipLabel>
        <relationshipName>ReserveTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Line Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__ClaimLineItem__c.vlocity_ins__ClaimId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__ClaimLineItem__c</referenceTo>
        <relationshipLabel>Reserve Transactions</relationshipLabel>
        <relationshipName>ReserveTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimPaymentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Payment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__ClaimPayment__c.vlocity_ins__InsuranceClaimId__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__ClaimPayment__c</referenceTo>
        <relationshipLabel>Reserve Transactions</relationshipLabel>
        <relationshipName>ReserveTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimRecoveryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim Recovery</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.vlocity_ins__InsuranceClaimId__c</field>
                <operation>equals</operation>
                <valueField>vlocity_ins__InsuranceClaimRecovery__c.vlocity_ins__ClaimId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__InsuranceClaimRecovery__c</referenceTo>
        <relationshipLabel>Recovery Transactions</relationshipLabel>
        <relationshipName>RecoveryTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Coverage__c</fullName>
        <formula>vlocity_ins__ClaimLineItemId__r.vlocity_ins__AssetCoverageName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InsuranceClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Reserve Transactions</relationshipLabel>
        <relationshipName>ClaimReserveTransactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvolvedPartyOrItem__c</fullName>
        <formula>If( vlocity_ins__ClaimInvolvedPartyId__c !=null,  vlocity_ins__ClaimInvolvedPartyId__r.Name,  vlocity_ins__ClaimInvolvedPropertyId__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeeAccountId__c</fullName>
        <formula>IF(vlocity_ins__ClaimLineItemId__c!=null, vlocity_ins__ClaimLineItemId__r.vlocity_ins__PayeeAccountId__c,  vlocity_ins__InsuranceClaimId__r.vlocity_ins__PrimaryPayeeAccountId__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeeContactId__c</fullName>
        <formula>IF(vlocity_ins__ClaimLineItemId__c!=null, vlocity_ins__ClaimLineItemId__r.vlocity_ins__PayeeContactId__c,  vlocity_ins__InsuranceClaimId__r.vlocity_ins__PrimaryPayeeContactId__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PayeePartyId__c</fullName>
        <formula>vlocity_ins__ClaimLineItemId__r.vlocity_ins__PayeePartyId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PostDate__c</fullName>
        <label>Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TransactionNumber__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjustor Review</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>FNOL</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Subrogation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reserve Transaction</label>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reserve Transactions</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__Payment</fullName>
        <active>true</active>
        <label>Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__Recovery</fullName>
        <active>true</active>
        <label>Recovery</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ReserveAdjustment</fullName>
        <active>true</active>
        <label>Reserve Adjustment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>